demos/session05/voting-app/network-policies/back-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-back-from-front
spec:
  podSelector:
    matchLabels:
      run: vote-app
      tier: back
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: vote-app
          tier: front
    ports:
    - port: 6379
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
      - port: 53
        protocol: UDP
