demos/session05/voting-app/network-policies/front-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-external-to-front
spec:
  podSelector:
    matchLabels:
      run: vote-app
      tier: front
  ingress:
  - {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
      - port: 53
        protocol: UDP
  - to:
    - podSelector:
        matchLabels:
          run: vote-app
          tier: back
    ports:
      - port: 6379
        protocol: TCP
